# BridgeGAD-04

./: .gitattributes  .gitignore  .replit  INSTRUCTIONS_27jULY.TXT  README.md  app.py  bridge_drawer.py  cad_utils.py  parameter_manager.py  pyproject.toml  render.yaml  replit.md  requirements.txt
.github/workflows/: ci.yml
bridgegad_env/: pyvenv.cfg
bridgegad_env/Scripts/: activate  activate.bat
